 * fetch_ufun_attrib now takes a new flag, UFUN_NAME, which will add
   the object's name to the beginning of the attr value (respecting
   no_name and no_space attr flags), for @o-* attrs. [MG]
 * Clean up the functions that send data across the network to 
   connections. [SW]
 * Updated intructions for compiling with MySQL support on Windows
   contributed by Daniko.
   
Fixes:
 * @lock/infilter, not @lock/infitler. [SW]
 * @shutdown/reboot handles failed database saves much more
   gracefully.  [SW]
 * Help fixes by Wiggles. [MG]
 * Fix a few places that could trigger an integer division exception.
   Reported by Ashen-Shugar. [SW]
 * A number of places in the hardcode incorrectly took TINY_MATH into
   account when deciding if something was a valid number or not. From
   a report by Daniel Powell. [MG]
 * doing() now evaluates the DOING attribute with better values for %#
   and %@. From a report by Padraic. [MG]
 * Fix some cases where functions like lcon() could return partial
   dbrefs at the end of a long output string. [SW]
 * When magic-sorting strings with embedded dbrefs, setunion() no longer
   treats different objects with the same name as being identical. Reported
   by Minion. [MG] [GM]
 * type() and hastype() claimed to work on GARBAGE objects, but actually
   returned #-1 NO SUCH MATCH. Reported by Jules. [MG]
 * A few messages were sent with incorrect nospoof data. Reported by 
   Jules. [MG]

Functions:
 * isregexp() to validate regexp patterns. Suggested by Padraic. [DC]

Version 1.8.4 patchlevel 7                                 Sep 25, 2011

Deprecation:
 * @elock, @eunlock, @ulock and @uunlock are deprecated. [SW]
 * @doing is now deprecated (see below).
 * The "newline_one_char" mush.cnf option is now deprecated, and will soon
   always be "Yes". If you have it set to No and have any code that assumes
   strlen(%r) == 2, you should change it now. [MG]

Major changes:
 * DOING is now a standard attribute. Your @doing can be any length, and